update training part

--- a/bookdown-demo.tex
+++ b/bookdown-demo.tex
@@ -84,7 +84,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2019-06-05}
+    \date{2019-06-17}
 
 \usepackage{booktabs}
 \usepackage{amsthm}
@@ -170,7 +170,27 @@
 \end{enumerate}
 
 \hypertarget{section-3}{%
-\chapter{其他}\label{section-3}}
+\chapter{培训}\label{section-3}}
+
+\\
+\textbf{目标:}\\
+\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}知识分享，共同进步。\\
+\textbf{时间：}\\
+\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}每两周一次（暂时）\\
+\textbf{讲师：}\\
+\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}团队成员，依次轮换。\\
+\textbf{内容： }\\
+\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}好用有用的包介绍、代码技巧、可复用函数等。\\
+\textbf{地点：}\\
+\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}当次培训讲师需至少提前一天在OA预定会议室，并在团队Q群发布培训通知。\\
+~~~~~~通知模板：\\
+培训：内容写在这里，请明确培训内容\\
+时间：时间写在这里，几月几日（周几） 00:00\\
+地点：会议室x\\
+参会人员需提前准备：需提前准备的内容或预习的材料写在这里，如有材料需附以文档。
+
+\hypertarget{section-4}{%
+\chapter{其他}\label{section-4}}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
