--- a/04-application.Rmd
+++ b/04-application.Rmd
@@ -1,7 +1,19 @@
-# 其他  
 
-1. 请假：请假请提前告知经理，请假天数达3天及以上最好提前5天申请，以便安排工作。获口头得批准后，在OA走流程申请《广州请假申请表》。请假时请告知助理备案。特殊情况可特殊处理。  
-
-2. 当发送材料或沟通重要事务，对象是公司内其他事业部及部门的同事时，需以邮件形式，并抄送经理；当部门内交付工作结果或发送其他重要文件时，需以邮件形式；当发送材料对象是公司外部客户及人员时，需获得经理同意，并以邮件形式发送，抄送经理。  
-
-3. 查阅资料，做好记录。形成自己的知识库。    
+# 培训  
+<br>  
+**目标:**  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;知识分享，共同进步。  
+**时间：**  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;每两周一次（暂时）  
+**讲师：**  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;团队成员，依次轮换。  
+**内容： **  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;好用有用的包介绍、代码技巧、可复用函数等。  
+**地点：**  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;当次培训讲师需至少提前一天在OA预定会议室，并在团队Q群发布培训通知。  
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;通知模板：  
+培训：内容写在这里，请明确培训内容  
+时间：时间写在这里，几月几日（周几） 00:00  
+地点：会议室x  
+参会人员需提前准备：需提前准备的内容或预习的材料写在这里，如有材料需附以文档。
