add dinner choice

--- a/05-trainning.Rmd
+++ b/05-trainning.Rmd
@@ -6,3 +6,14 @@
 
 3. 查阅资料，做好记录。形成自己的知识库。    
 
+4. 加班：
+```
+if 晚上加班 & 下班时间 > 8pm:
+    if 想点公司的订餐:
+        要在界面把定位改到a栋再点。
+        每天17: 00截止。
+    else:
+        出去吃报销。
+else:
+    拜拜，明天见~~
+```
