--- a/bookdown-demo.tex
+++ b/bookdown-demo.tex
@@ -84,7 +84,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2019-06-17}
+    \date{2019-06-18}
 
 \usepackage{booktabs}
 \usepackage{amsthm}
@@ -199,8 +199,19 @@
 \item
   当发送材料或沟通重要事务，对象是公司内其他事业部及部门的同事时，需以邮件形式，并抄送经理；当部门内交付工作结果或发送其他重要文件时，需以邮件形式；当发送材料对象是公司外部客户及人员时，需获得经理同意，并以邮件形式发送，抄送经理。
 \item
-  查阅资料，做好记录。形成自己的知识库。
+  加班：
 \end{enumerate}
+
+\begin{verbatim}
+if 晚上加班 & 下班时间 > 8pm:
+    if 想点公司的订餐:
+        要在界面把定位改到a栋再点。
+        每天17: 00截止。
+    else:
+        出去吃报销。
+else:
+    拜拜，明天见~~
+\end{verbatim}
 
 \bibliography{book.bib,packages.bib}
 
